--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<h2>齐天<span>大圣 H</span></h2>
 							<p>
 						<a href="#"><i class="heart"></i></a>	
-						<a href="bj/html"><i class="share"></i></a>
+						<a href="https://github.com/banbudong/banbudong.github.io/tree/master/bj/html"><i class="share"></i></a>
 							</p>
 						</figcaption>			
 					</figure>
@@ -481,7 +481,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<h2>暗裔<span>剑魔 C</span></h2>
 							<p>
 							  <a href="#"><i class="heart"></i></a>	
-								<a href="bj/css"><i class="share"></i></a>
+								<a href="https://github.com/banbudong/banbudong.github.io/tree/master/bj/css"><i class="share"></i></a>
 							</p>
 						</figcaption>			
 					</figure>
@@ -491,7 +491,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<h2>至高<span>之拳 JQ</span></h2>
 							<p>
 							<a href="#"><i class="heart"></i></a>	
-								<a href="bj/jquery"><i class="share"></i></a>
+								<a href="https://github.com/banbudong/banbudong.github.io/tree/master/bj/jquery"><i class="share"></i></a>
 							</p>
 						</figcaption>			
 					</figure>
